See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 11.00.00

              (No significance to new major number; just ran out of 2-digit
              minor numbers).

              Add pamcat.

              pbmtextps: improve error messages.

              ppmtoicr: Fix bug: all options cause bogus command line parsing
              errors.  Always broken.  Ppmtoicr was new in 1991.

              ppmtoicr: Fix arithmetic overflows.

              ppmtoicr: make -rle option issue an error message saying it no
              longer exists (it did, sort of, before 2015).

              pnmindex: fix shell injection vulnerabilities.  Broken since
              Netpbm 10.28 (June 2005).

              pnmmargin: fix shell injection vulneraibility.  Always broken
              (Program was added in primordial Netpbm in 1990).

22.06.24 BJH  Release 10.99.00

              Add pamrestack.

              Add pamshuffle.

              Add pamtoqoi, qoitopam.

              palmtopnm: Fix failure with bogus claim of invalid input on
              architectures that do not use two's complement negative numbers.
              Always broken.  (Ability to convert PackBits input was new in
              Netpbm 10.27 (March 2005).

              pnmgamma -srgbtobt709, -bt709tosrgb: fix bug; incorrect output.
              Always broken (These options were new in Netpbm 10.32 (February
              2006)).  Thanks Alexander Shpilkin <ashpilkin@gmail.com>.

              pamdice: Fix incorrect output file name with PAM input.  Always
              broken (pamdice was new in Netpbm 9.25 (March 2002).

              libnetpbm: Stop bogus runtime error check failure in pmfileio.c
              shifts.

22.03.27 BJH  Release 10.98.00

              pamtopdbimg: Add -fixedtime.

              ppmfade: Use temporary files securely.
              